# LMS_DRF

./: .env_sample  pyproject.toml  users_data.json
config/: settings.py  urls.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_course_creator_lesson_creator.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: users.json
users/management/commands/: csu.py  fill_p.py  fill_u.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_subscription.py  0004_payment_payment_link_payment_session_id.py  0005_payment_amount.py  0006_alter_user_last_login.py  0007_alter_user_last_login.py
